# intronProspector

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  Makefile.in  README.md  configure  configure.ac  defs.mk
docs/: intronProspector.1.md  intronProspector.md  intronProspectorMerge.1.md  intronProspectorMerge.md
man/: Makefile.in  intronProspector.1  intronProspector.header  intronProspectorMerge.1  intronProspectorMerge.header
misc/: buildDist  wrapper.sh
src/: AutoGzip.hh  GzipStreamBuf.cc  GzipStreamBuf.hh  Makefile  Makefile.in  PipeProcess.cc  PipeProcess.hh  cliCommon.cc  cliCommon.hh  genome.cc  genome.hh  intronProspector.cc  intronProspector.man.h  intronProspectorMerge.cc  intronProspectorMerge.man.h  junctions.cc  junctions.hh  junctions_extractor.cc  junctions_extractor.hh  manpage.h  mkManHelp.awk  splice_juncs.cc  splice_juncs.hh  strconvert.hh  tsv.hh  type_ops.hh  version.hh  version.hh.in  zfstream.cc  zfstream.hh
tests/: Makefile  Makefile.in  README
tests/expected/: test1.introns.bed  test1.introns.tsv  test1.juncs.bed  test2.introns.bed  test2.introns.tsv  test2.juncs.bed  testBasic1.introns.tsv  testBasic1.juncs.bed  testBasic134Merge.introns.bed  testBasic134Merge.introns.tsv  testBasic134Merge.juncs.bed  testBasic2.introns.bed  testBasic2.introns.tsv  testBasic2.juncs.bed  testBasic3.introns.bed  testBasic3.introns.tsv  testBasic3.juncs.bed  testBasic4.introns.bed  testBasic4.introns.tsv  testBasic4.juncs.bed  testBasic5.introns.bed  testBasic5.introns.tsv  testBasic5.juncs.bed  testBasicEns1.introns.bed  testBasicEns1.introns.tsv  testBasicEns1.juncs.bed  testBasicEns2.introns.tsv  testFake10a.debug.tsv  testFake10a.introns.bed  testFake10a.introns.tsv  testFake10a.juncs.bed  testFake10aConf.debug.tsv  testFake10aConf.introns.bed  testFake10aConf.introns.tsv  testFake10aConf.juncs.bed  testFake10abMerge.introns.tsv  testFake10agz.debug.tsv  testFake10b.introns.bed  testFake10b.introns.tsv  testFake10b.juncs.bed  (+33 more)
tests/input/: basic134.files.txt  fake10.hisat2.regtools.bed  fake10.hisat2.sam  fake10.missing.sam  fake10.star.regtools.bed  fake10.star.sam  fake10.star.sj.tab  fake10_1.fastq  fake10_2.fastq  fake10_genome.fa  fake10_scramble_genome.fa  merge1.calls.tsv  merge2.calls.tsv  ont-out-of-order-targets.sam  ont-skip-targets.sam  sort-bug.sam  sort-bug.size  test1.sam  test_basic.sam  test_basic.star-sj  test_basic_ens.sam  test_multi.one.sam  test_multi.sam  test_multi.size  test_multi.two.sam
tests/input/strand-confict/: SRR6225360.calls.tsv  SRR6225361.calls.tsv  SRR6225362.calls.tsv  SRR6225363.calls.tsv
